--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h2> "Simulador JavaScript"</h2>
    <script src="./js/app.js"></script> 
 </body>
 </html>
